--- a/style.css
+++ b/style.css
@@ -1,124 +1,75 @@
-body{
-  background-color: #F0F0F0;
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&family=Montserrat:wght@100&family=Poppins:wght@300&display=swap");
+body {
+  font-family: "Manrope", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-family: "Poppins", sans-serif;
-}
-.full-card{
+  background-color: #F0F0F0;
   display: flex;
+  overflow: hidden;
+  height: 100vh;
   justify-content: center;
   align-items: center;
 }
 
-.card{
-  /* border: yellow 2px solid; */
-  background-color: #FFFFFF;
-  border-radius: 1rem 1rem 10rem .1rem;
-  margin: 40px;
-  width: 60%;
-  /* height: 80vh; */
+hr {
+  margin-right: 90px;
 }
-form{
-  /* border: solid 2px green; */
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 20px;
+  border-bottom-right-radius: 205px;
+  padding: 2%;
+}
+
+#ageForm {
   display: flex;
-  flex-direction: column;
-  height: 30vh;
-
-}
-.container{
-  display: flex;
-  gap: 20px;
-  /* border: solid red 2px; */
-}
-.box{
-  padding: 5px;
-  padding-top: 30px;    
-  padding-left: 20px;
-
-}
-.box label{
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 14px;
-  color: #757575;
-}
-input{
-  width: 100px;
-  padding: 15px;
-  border-radius: .5rem;
-  border: 1px solid #E0E0E0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 15px;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-input::placeholder{
-  font-size: 20px;
-  font-weight: 800;
+label {
+  display: block;
+  margin-bottom: 10px;
+  color: #717171;
 }
 
-input:focus {
-  border: 2px solid #3498db;
+input[type=text], input[type=number] {
+  padding: 20px;
+  margin-bottom: 10px;
+  border: solid #DDDDDD;
+  border-radius: 10px;
 }
 
-.submit-box{
-  display: flex;
-  align-items: center;
-  /* border: 2px solid yellow; */
+span {
+  color: #864DFE;
 }
-.submit-box hr{
-  width: 100%;
-}
-.submit-btn{
-  border-radius: 50%;
-  padding: 30px;
-  margin-right: 50px;
+
+button {
+  padding: 40px;
+  background-color: #864DFE;
+  color: #fff;
   border: none;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #864EFF;
+  border-radius: 50%;
+  position: relative;
+  top: 67px;
 }
 
-.submit-btn:hover {
-  transform: scale(1.1);
-}
-.output h1{
-  font-size: 60px;
-  font-weight: 900;
-  font-style: italic;
-  height: fit-content;
-  margin-left: 80px;
-  line-height: 40px;
-  /* border: solid 2px black; */
-
-}
-.output span{
-  color: #864EFF;
-  font-size: 84px;
-}
-small{
-  color: red;
+button:hover, button:focus {
+  background-color: #0056b3;
 }
 
+#result {
+  margin-top: 20px;
+  font-weight: bold;
+}
+#result h1 {
+  font-size: 32px;
+}
 
-@media screen and (min-width:600px) {
-  .card{
-      width: 600px;
-  }
-  .container{
-      padding: 20px;
-  }
-  .form_container{
-      margin-bottom: 10px;
-      gap: 0;
-      justify-content: space-between;
-  }
-  
-  .output{
-      /* margin-top: 80px; */
-  }
-  .output h1{
-      font-size: 50px;
-  }
+.countup {
+  transition: all 1s;
 }
